--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,30 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+ext {
+    appCompatVersion = '1.2.0'
+    constraintLayoutVersion = '2.0.4'
+    cardView = '1.0.0'
+    coreTestingVersion = '2.1.0'
+    coroutines = '1.3.9'
+    lifecycleVersion = '2.2.0'
+    materialVersion = '1.2.1'
+    roomVersion = '2.2.6'
+    // testing
+    junitVersion = '4.13.1'
+    espressoVersion = '3.1.0'
+    androidxJunitVersion = '1.1.2'
+}
+
 buildscript {
-    ext.kotlin_version = "1.3.72"
+    ext.kotlin_version = "1.4.21"
+    ext.nav_version = "2.3.2"
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.1.0"
+        classpath "com.android.tools.build:gradle:4.1.1"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
