--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ ext {
     lifecycleVersion = '2.2.0'
     materialVersion = '1.2.1'
     roomVersion = '2.2.6'
+    admobVersion = '20.2.0'
     // testing
     junitVersion = '4.13.1'
     espressoVersion = '3.1.0'
