--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,17 +13,20 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.NavigationWithTabs">
-        <activity android:name="com.meadowlandapps.simplelists.ui.MainActivity">
+        <activity
+            android:name=".ui.MainActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
-        <receiver android:name="com.meadowlandapps.simplelists.receiver.AlarmReceiver" />
+        <receiver android:name=".receiver.AlarmReceiver" />
         <receiver
-            android:name="com.meadowlandapps.simplelists.receiver.DeviceBootReceiver"
-            android:enabled="true">
+            android:name=".receiver.DeviceBootReceiver"
+            android:enabled="true"
+            android:exported="false">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
