--- a/build.gradle
+++ b/build.gradle
@@ -1,29 +1,29 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 ext {
-    appCompatVersion = '1.2.0'
-    constraintLayoutVersion = '2.0.4'
+    appCompatVersion = '1.6.0'
+    constraintLayoutVersion = '2.1.4'
     cardView = '1.0.0'
     coreTestingVersion = '2.1.0'
-    coroutines = '1.3.9'
-    lifecycleVersion = '2.2.0'
+    coroutines = '1.6.4'
+    lifecycleVersion = '2.5.1'
     materialVersion = '1.2.1'
-    roomVersion = '2.2.6'
     admobVersion = '20.2.0'
+    roomVersion = '2.5.0'
     // testing
-    junitVersion = '4.13.1'
+    junitVersion = '4.13.2'
     espressoVersion = '3.1.0'
-    androidxJunitVersion = '1.1.2'
+    androidxJunitVersion = '1.1.5'
 }
 
 buildscript {
-    ext.kotlin_version = "1.4.21"
-    ext.nav_version = "2.3.2"
+    ext.kotlin_version = '1.7.20'
+    ext.nav_version = '2.5.3'
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.2.1'
+        classpath 'com.android.tools.build:gradle:7.3.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
 
@@ -35,7 +35,7 @@ buildscript {
 allprojects {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
 }
 
